@@ -30,3 +30,4 @@ options = Options
 edit = Edit
 delete = Delete
 no_data = No data has been found
+error = Action Error
